tests/suite/core/snapshots/integration__suite__core__pass_mir__snapshot_mir_with_control_flow.snap
---
source: tests/suite/core/pass_mir.rs
assertion_line: 22
expression: mir
---
MirProgram {
    functions: [
        MirFunction {
            name: "main",
            params: [],
            evidence_params: [],
            ret_type: Unit,
            body: [
                Expr(
                    If {
                        cond: Literal(
                            Bool(
                                true,
                            ),
                        ),
                        then_body: [
                            Return(
                                Literal(
                                    Unit,
                                ),
                            ),
                        ],
                        else_body: Some(
                            [
                                Return(
                                    Literal(
                                        Unit,
                                    ),
                                ),
                            ],
                        ),
                    },
                ),
            ],
        },
    ],
    externals: [],
    evidence_table: EvidenceTable {
        entries: [],
    },
}
